--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ yew = { version = "0.21.0", features = ["csr"] }
 web-sys = "0.3.74"
 console_log = "1.0.0"
 log = { version = "0.4" }
+yew_styles = "0.11.0"
+stylist = { version = "0.13.0", features = ["yew"]}
