--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,5 @@ web-sys = "0.3.74"
 console_log = "1.0.0"
 log = { version = "0.4" }
 yew_styles = "0.11.0"
-stylist = { version = "0.13.0", features = ["yew"]}
+tailwind-css = "0.13.0"
+trunk = "0.21.4"
