--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^3.4.16"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@tailwindcss/forms": "^0.5.9",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
