--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 /package-lock.json
 /package.json
 /node_modules/**
-/dist/**
-./styles/app.css
+styles/app.css
+./public/storage/**
+./package-lock.json
