--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,8 @@ walkdir = "2.5.0"
 chrono = "0.4.39"
 once_cell = "1.20.2"
 serde-wasm-bindgen = "0.6.5"
+console = "0.15.8"
+
 ## 定义多个二进制目标
 [[bin]]
 name = "generate"
