--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ chrono = "0.4.39"
 once_cell = "1.20.2"
 serde-wasm-bindgen = "0.6.5"
 console = "0.15.8"
+pulldown-cmark = "0.9"
+regex = "1.11.1"  # 用于解析 Markdown
 
 ## 定义多个二进制目标
 [[bin]]
